# autosql

./: .gitignore  pyproject.toml
postgres_da_ai_agent/: api.txt  main.py  prompts.txt
