[tool.poetry]
name = "autosql"
version = "0.1.0"
description = "natural language postgresql query prompter"
authors = ["mois"]
readme = "README.md"
packages = [{include = "postgres_da_ai_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
psycopg2-binary = "^2.9.8"
argparse = "^1.4.0"
python-dotenv = "^1.0.0"
update = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "postgres_da_ai_agent.main:main"